Add cleaned up Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,22 +1,23 @@
 PROGNAME=fd1d_heat_explicit
 
+MODULES=Types_mod RHS_mod CFL_mod IO_mod Solver_mod
+MOD_FILES = $(MODULES:=.f90)
+OBJ_FILES = $(MOD_FILES:.f90=.o)
+MOD_HEADERS = $(MOD_FILES:.f90=.mod)
+
 test : main
 	diff h_test01.txt h_test01.txt_bak
 
-main : $(PROGNAME).o
-	nagfor $^ Types_mod.o RHS_mod.o CFL_mod.o -o $<.exe
+main : $(OBJ_FILES) $(PROGNAME).o
+	nagfor -I. $^ -o $(PROGNAME).exe
 
-$(PROGNAME).o: $(PROGNAME).f90 types_mod.mod rhs_mod.mod cfl_mod.mod
-	nagfor -c -I. $< -o $@
+# clear out all suffixes
+.SUFFIXES:
+# list only those we use
+.SUFFIXES: .o .f90
 
-types_mod.mod : Types_mod.f90
-	nagfor -c $^
-
-rhs_mod.mod : RHS_mod.f90
-	nagfor -c $^
-
-cfl_mod.mod : CFL_mod.f90
-	nagfor -c $^
+.f90.o :
+	nagfor -I. -c $<
 
 .PHONY: clean
 clean:
